--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta name="Description" content="Javascript library to generate a sphere covered in hexagons." />
         <meta name="Keywords" content="hexasphere, hexasphere.js, geodesic sphere, geodesic polyhedron, javascript, hexagons" />
-        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+        <script src="//code.jquery.com/jquery-2.0.3.min.js"></script>
 
         <!-- these are just for the demo page / options -->
 
